fdo#58590 - cleanup and accelerate break-iterators.

Doing word-count by switching per-word between two different
kinds of word iterator was insanely slow. This preserves an
ICU break-iterator for each type of word-breaking.